--- a/web/html/index.html
+++ b/web/html/index.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Orbitron:wght@600;700;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script>
+        // Apply theme before render to prevent flash
+        (function() {
+            var t = localStorage.getItem('ctrltab-theme');
+            if (t && t !== 'light') document.documentElement.dataset.theme = t;
+        })();
+    </script>
 </head>
 <body>
     <!-- Cyberpunk grid background -->
@@ -42,6 +49,23 @@
                 <ul class="collections-list" id="collectionsList">
                     <!-- Collections will be loaded here -->
                 </ul>
+            </div>
+
+            <div class="sidebar-footer">
+                <div class="settings-wrapper">
+                    <div class="settings-dropdown" id="settingsDropdown">
+                        <div class="settings-dropdown-label">Theme</div>
+                        <button class="theme-option active" data-theme-value="light" onclick="setTheme('light')">Light</button>
+                        <button class="theme-option" data-theme-value="cyberpunk" onclick="setTheme('cyberpunk')">Cyberpunk</button>
+                    </div>
+                    <button class="settings-btn" id="settingsBtn" title="Settings">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                            <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z" stroke="currentColor" stroke-width="1.5"/>
+                            <path d="M13.05 10.13a1.14 1.14 0 0 0 .23 1.26l.04.04a1.38 1.38 0 1 1-1.96 1.96l-.04-.04a1.14 1.14 0 0 0-1.26-.23 1.14 1.14 0 0 0-.69 1.05v.11a1.38 1.38 0 1 1-2.76 0v-.06a1.14 1.14 0 0 0-.75-1.05 1.14 1.14 0 0 0-1.26.23l-.04.04a1.38 1.38 0 1 1-1.96-1.96l.04-.04a1.14 1.14 0 0 0 .23-1.26 1.14 1.14 0 0 0-1.05-.69h-.11a1.38 1.38 0 1 1 0-2.76h.06a1.14 1.14 0 0 0 1.05-.75 1.14 1.14 0 0 0-.23-1.26l-.04-.04a1.38 1.38 0 1 1 1.96-1.96l.04.04a1.14 1.14 0 0 0 1.26.23h.06a1.14 1.14 0 0 0 .69-1.05v-.11a1.38 1.38 0 1 1 2.76 0v.06a1.14 1.14 0 0 0 .69 1.05 1.14 1.14 0 0 0 1.26-.23l.04-.04a1.38 1.38 0 1 1 1.96 1.96l-.04.04a1.14 1.14 0 0 0-.23 1.26v.06a1.14 1.14 0 0 0 1.05.69h.11a1.38 1.38 0 1 1 0 2.76h-.06a1.14 1.14 0 0 0-1.05.69Z" stroke="currentColor" stroke-width="1.5"/>
+                        </svg>
+                        Settings
+                    </button>
+                </div>
             </div>
         </aside>
 
