change theme name

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -52,7 +52,7 @@
                 <div class="settings-wrapper">
                     <div class="settings-dropdown" id="settingsDropdown">
                         <div class="settings-dropdown-label">Theme</div>
-                        <button class="theme-option active" data-theme-value="light" onclick="setTheme('light')">Light</button>
+                        <button class="theme-option active" data-theme-value="light" onclick="setTheme('light')">Default</button>
                         <button class="theme-option" data-theme-value="cyberpunk" onclick="setTheme('cyberpunk')">Cyberpunk</button>
                     </div>
                     <button class="settings-btn" id="settingsBtn" title="Settings">
