--- a/web/html/index.html
+++ b/web/html/index.html
@@ -57,7 +57,7 @@
                 <div class="settings-wrapper">
                     <div class="settings-dropdown" id="settingsDropdown">
                         <div class="settings-dropdown-label">Theme</div>
-                        <button class="theme-option active" data-theme-value="light" onclick="setTheme('light')">Default</button>
+                        <button class="theme-option active" data-theme-value="light" onclick="setTheme('light')">Light (default)</button>
                         <button class="theme-option" data-theme-value="dark" onclick="setTheme('dark')">Dark</button>
                         <button class="theme-option" data-theme-value="cyberpunk" onclick="setTheme('cyberpunk')">Cyberpunk</button>
                     </div>
