theme backend cleanup

--- a/web/html/login.html
+++ b/web/html/login.html
@@ -6,10 +6,8 @@
     <meta name="description" content="Self-hosted link manager">
     <title>Login - CtrlTab</title>
     <link rel="icon" href="icons/favicon.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Orbitron:wght@600;700;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cyberpunk.css">
     <style>
         .login-container {
             display: flex;
@@ -42,10 +40,6 @@
 
         .login-logo .logo-accent {
             color: var(--color-highlight);
-        }
-
-        [data-theme="cyberpunk"] .login-logo {
-            text-shadow: var(--glow-highlight);
         }
 
         .login-subtitle {
