--- a/web/html/index.html
+++ b/web/html/index.html
@@ -9,10 +9,8 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icons/favicon.svg">
     <link rel="apple-touch-icon" href="icons/icon-192.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Orbitron:wght@600;700;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cyberpunk.css">
     <script>
         // Apply theme before render to prevent flash
         (function() {
