new logo and renaming ctrlTAB

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Self-hosted link manager">
     <meta name="theme-color" content="#ffffff">
-    <title>CtrlTab</title>
+    <title>ctrlTAB</title>
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icons/favicon.svg">
-    <link rel="apple-touch-icon" href="icons/icon-192.png">
+    <link rel="apple-touch-icon" href="icons/ctrltab-logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="cyberpunk.css">
     <script>
@@ -31,9 +31,10 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h1 class="logo">
-                    <span class="logo-text">Ctrl</span><span class="logo-accent">Tab</span>
-                </h1>
+                <div class="logo">
+                    <img class="logo-img logo-light" src="icons/ctrltab-logo.png" alt="ctrlTAB">
+                    <img class="logo-img logo-dark" src="icons/ctrltab-logo-dark.png" alt="ctrlTAB">
+                </div>
                 <div class="subtitle">Link Manager</div>
             </div>
 
@@ -66,7 +67,7 @@
         <main class="main-content">
             <div class="content-header">
                 <div class="collection-title-container">
-                    <h2 class="collection-title" id="collectionTitle">CtrlTab</h2>
+                    <h2 class="collection-title" id="collectionTitle">ctrlTAB</h2>
                     <div class="collection-actions">
                         <button class="btn-icon" id="editCollectionBtn" title="Edit collection" style="display: none;">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
