make logo clickable

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -31,7 +31,7 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <div class="logo">
+                <div class="logo" onclick="goHome()" title="Go to last collection">
                     <img class="logo-img logo-light" src="icons/ctrltab-logo.png" alt="ctrlTAB">
                     <img class="logo-img logo-dark" src="icons/ctrltab-logo-dark.png" alt="ctrlTAB">
                 </div>
